@@ -1,3 +1,8 @@
+2005-01-06  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkiconview.c: Make markup_column work, and fix some
+	layout issues when either icon or text is missing.  (#163065)
+
 2005-01-06  Federico Mena Quintero  <federico@ximian.com>
 
 	* gtk/gtkfilechooserdefault.c (file_list_build_popup_menu): Add an
